--- a/PocketComputerTutorial/PocketComputerTutorial.Forms/packages.config
+++ b/PocketComputerTutorial/PocketComputerTutorial.Forms/packages.config
@@ -1,5 +1,13 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Newtonsoft.Json" version="12.0.3" targetFramework="net472" />
+  <package id="Syncfusion.Grid.Base" version="18.1.0.46" targetFramework="net472" />
+  <package id="Syncfusion.Grid.Windows" version="18.1.0.46" targetFramework="net472" />
+  <package id="Syncfusion.Licensing" version="18.1.0.46" targetFramework="net472" />
+  <package id="Syncfusion.Shared.Base" version="18.1.0.46" targetFramework="net472" />
+  <package id="Syncfusion.Shared.Windows" version="18.1.0.46" targetFramework="net472" />
+  <package id="Syncfusion.SpellChecker.Base" version="18.1.0.46" targetFramework="net472" />
+  <package id="Syncfusion.Tools.Base" version="18.1.0.46" targetFramework="net472" />
+  <package id="Syncfusion.Tools.Windows" version="18.1.0.46" targetFramework="net472" />
   <package id="System.ComponentModel.Annotations" version="4.7.0" targetFramework="net472" />
 </packages>
